<resources>
    <string name="app_name" translatable="false">Kobold</string>
    <string name="key__phone_pause" comment="Label for the Pause key in the telephone keyboard layout">Pause</string>
    <string name="key__phone_wait" comment="Label for the Wait key in the telephone keyboard layout">Wait</string>
    <string name="key_popup__threedots_alt" comment="Content description for the three-dots icon in a key popup">Three-dot icon. If visible, indicates that more letters can be used if longer pressed.</string>
    <string name="one_handed__close_btn_content_description" comment="Content description for the one-handed close button">Close one-handed mode.</string>
    <string name="one_handed__move_start_btn_content_description" comment="Content description for the one-handed move to left button">Move keyboard to the left.</string>
    <string name="one_handed__move_end_btn_content_description" comment="Content description for the one-handed move to right button">Move keyboard to the right.</string>
    <string name="private_mode_dialog__title" comment="Title of the private mode dialog">Private mode</string>
    <string name="media__tab__emojis" comment="Tab description for emojis in the media UI">Emojis</string>
    <string name="media__tab__emoticons" comment="Tab description for emoticons in the media UI">Emoticons</string>
    <string name="media__tab__kaomoji" comment="Tab description for kaomoji in the media UI">Kaomoji</string>
    <string name="emoji__category__smileys_emotion" comment="Emoji category name">Smileys &amp; Emotions</string>
    <string name="emoji__category__people_body" comment="Emoji category name">People &amp; Body</string>
    <string name="emoji__category__animals_nature" comment="Emoji category name">Animals &amp; Nature</string>
    <string name="emoji__category__food_drink" comment="Emoji category name">Food &amp; Drink</string>
    <string name="emoji__category__travel_places" comment="Emoji category name">Travel &amp; Places</string>
    <string name="emoji__category__activities" comment="Emoji category name">Activities</string>
    <string name="emoji__category__objects" comment="Emoji category name">Objects</string>
    <string name="emoji__category__symbols" comment="Emoji category name">Symbols</string>
    <string name="emoji__category__flags" comment="Emoji category name">Flags</string>
    <string name="smartbar__quick_action_toggle__alt" comment="Content description for the quick action toggle button in Smartbar">Quick action toggle. If pressed, toggles between the word suggestions and the quick action buttons.</string>
    <string name="smartbar__quick_action__exit_editing" comment="Content-description for the exit editing layout button in Smartbar">Exit text editing panel.</string>
    <string name="smartbar__quick_action__one_handed_mode" comment="Content-description for the one-handed quick action in Smartbar">Toggle the state of the one-handed mode.</string>
    <string name="smartbar__quick_action__open_settings" comment="Content-description for the settings quick action in Smartbar">Open settings.</string>
    <string name="smartbar__quick_action__switch_to_editing_context" comment="Content-description for the editing quick action in Smartbar">Switch to text editing panel.</string>
    <string name="smartbar__quick_action__switch_to_media_context" comment="Content-description for the media quick action in Smartbar">Switch to media input view.</string>
    <string name="smartbar__quick_action__undo" comment="Content-description for the undo quick action in Smartbar">Undo button to reverse the last action</string>
    <string name="smartbar__quick_action__redo" comment="Content-description for the redo quick action in Smartbar">Redo button to reverse the last Undo</string>
    <string name="smartbar__quick_action__private_mode" comment="Content-description for the private mode button in Smartbar">If visible, indicates that private mode is active. When clicked, shows info about the private mode.</string>
    <string name="settings__title" comment="Title of Settings">Settings</string>
    <string name="settings__menu" comment="Hint of top-right three-dot icon in Settings">More options</string>
    <string name="settings__menu_about" comment="Three-dot menu entry for About activity" translatable="false">@string/about__title</string>
    <string name="settings__menu_advanced" comment="Three-dot menu entry for Advanced activity" translatable="false">@string/settings__advanced__title</string>
    <string name="settings__menu_help" comment="Three-dot menu entry for Help and Feedback web link">Help &amp; feedback</string>
    <string name="settings__help" comment="General label for help buttons in Settings">Help</string>
    <string name="settings__navigation__home" comment="Long-press hint of bottom nav item Home in Settings">Home</string>
    <string name="settings__navigation__keyboard" comment="Long-press hint of bottom nav item Keyboard in Settings">Keyboard</string>
    <string name="settings__navigation__typing" comment="Long-press hint of bottom nav item Typing in Settings">Typing</string>
    <string name="settings__navigation__theme" comment="Long-press hint of bottom nav item Theme in Settings">Theme</string>
    <string name="settings__navigation__gestures" comment="Long-press hint of bottom nav item Gestures in Settings">Gestures</string>
    <string name="settings__default" comment="General string which is used when a preference has the default value set">Default</string>
    <string name="settings__system_default" comment="General string which is used when a preference has the system default value set">System default</string>
    <string name="settings__home__title" comment="Title of the Home fragment">Welcome to %s</string>
    <string name="settings__home__ime_not_enabled" comment="Error message shown in Home fragment when Kobold is not enabled in the system">Kobold is not enabled in the system and thus won\'t be available as an input method in the input picker. Click here to resolve this issue.</string>
    <string name="settings__home__ime_not_selected" comment="Warning message shown in Home fragment when Kobold is not selected as the default keyboard">Kobold is not selected as the default input method. Click here to resolve this issue.</string>
    <string name="settings__home__contribute" comment="Contributing message shown in Home fragment">Thanks for trying out Kobold! This project is still in alpha and therefore missing features. If you find any bugs or want to make a suggestion, please check out the repo on GitHub and file an issue. This helps making Kobold better. Thank you!</string>
    <string name="settings__localization__title" comment="Title of languages and layout box in the Typing fragment">Languages &amp; Keyboard layouts</string>
    <string name="settings__localization__subtype_no_subtypes_configured_warning" comment="Warning message that no subtype has been defined in the Typing fragment">It seems that you haven\'t configured any subtypes. As a fallback the subtype English/QWERTY will be used!</string>
    <string name="settings__localization__subtype_add" comment="Subtype dialog add button">Add</string>
    <string name="settings__localization__subtype_add_title" comment="Title of subtype dialog when adding a new subtype">Add subtype</string>
    <string name="settings__localization__subtype_apply" comment="Subtype dialog apply button">Apply</string>
    <string name="settings__localization__subtype_cancel" comment="Subtype dialog cancel button">Cancel</string>
    <string name="settings__localization__subtype_delete" comment="Subtype dialog delete button">Delete</string>
    <string name="settings__localization__subtype_edit_title" comment="Title of subtype dialog when editing an existing subtype">Edit subtype</string>
    <string name="settings__localization__subtype_locale" comment="Label for locale dropdown in subtype dialog">Locale</string>
    <string name="settings__localization__subtype_characters_layout" comment="Label for layout dropdown in subtype dialog">Characters layout</string>
    <string name="settings__localization__subtype_symbols_layout" comment="Label for layout dropdown in subtype dialog">Symbols primary layout</string>
    <string name="settings__localization__subtype_symbols2_layout" comment="Label for layout dropdown in subtype dialog">Symbols secondary layout</string>
    <string name="settings__localization__subtype_composer" comment="Label for composer dropdown in subtype dialog.">Composer</string>
    <string name="settings__localization__subtype_currency_set" comment="Label for currency set dropdown in subtype dialog. 'set' is used as a noun here and can be compared to a group of elements (in this case currency symbols).">Currency set</string>
    <string name="settings__localization__subtype_numeric_layout" comment="Label for layout dropdown in subtype dialog">Numeric layout</string>
    <string name="settings__localization__subtype_numeric_advanced_layout" comment="Label for layout dropdown in subtype dialog">Numeric (advanced) layout</string>
    <string name="settings__localization__subtype_numeric_row_layout" comment="Label for layout dropdown in subtype dialog">Number row layout</string>
    <string name="settings__localization__subtype_phone_layout" comment="Label for layout dropdown in subtype dialog">Phone primary layout</string>
    <string name="settings__localization__subtype_phone2_layout" comment="Label for layout dropdown in subtype dialog">Phone secondary layout</string>
    <string name="settings__localization__subtype_error_already_exists" comment="Error message shown in subtype dialog when a subtype to add already exists">This subtype already exists!</string>
    <string name="settings__localization__subtype_error_layout_not_installed" comment="Error message shown in subtype list when a layout is not installed, where %s will be replaced by the layout ID">%s (not installed)</string>
    <string name="settings__theme__title" comment="Title of the Theme fragment">Keyboard theme</string>
    <string name="settings__theme__undefined" comment="General string for an undefined preference value">Undefined</string>
    <string name="setup__prev_button" comment="Label of Previous button in Setup (try to find a short translation due to limited space in UI)">Prev</string>
    <string name="setup__cancel_button" comment="Label of Cancel button in Setup">Cancel</string>
    <string name="setup__next_button" comment="Label of Next button in Setup (try to find a short translation due to limited space in UI)">Next</string>
    <string name="setup__finish_button" comment="Label of Finish button in Setup">Finish</string>
    <string name="setup__ok_button" comment="Label of OK button in Setup">OK</string>
    <string name="kobold_createchat_expand_view">Perluas Tampilan</string>
    <string name="buyer_detail_title">Detail Pembeli</string>
    <string name="kobold_transaction_buyer_name">Nama Pembeli</string>
    <string name="kobold_transaction_choosechannel">Pilih Channel</string>
    <string name="kobold_transaction_phone_number">Nomor Telepon</string>
    <string name="kobold_transaction_receiver_address">Alamat Penerima</string>
    <string name="order_detail_title">Detail Pesanan</string>
    <string name="kobold_transaction_price_item">Harga Barang*</string>
    <string name="kobold_transaction_order_detail">Untuk Pembayaran</string>
    <string name="kobold_transaction_order_detail_hint">Contoh: 1 kaos putih dan 2 celana hitam</string>
    <string name="kobold_transaction_price_hint">Rp</string>
    <string name="kobold_transaction_payment_type">Metode Bayar*</string>
    <string name="kobold_transaction_shippingcost">Ongkir</string>
    <string name="kobold_transaction_button_create"><![CDATA[Buat Transaksi & Pasang di chat]]></string>
    <string name="kobold_transaction_courier">Kurir</string>
</resources>