<?xml version="1.0" encoding="utf-8"?>
<dev.patrickgold.florisboard.ime.text.smartbar.SmartbarView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/smartbar_height"
    android:orientation="horizontal"
    android:layoutDirection="locale">

    <dev.patrickgold.florisboard.common.FlorisViewFlipper
        android:id="@+id/action_start_area"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--            style="@style/SmartbarBLQuickAction.Toggle"-->
        <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
            android:id="@+id/quick_action_toggle"
            style="@style/SmartbarBLQuickAction"
            android:contentDescription="@string/smartbar__quick_action_toggle__alt"
            android:src="@drawable/ic_bllogo"/>

        <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
            android:id="@+id/back_button"
            style="@style/SmartbarQuickAction"
            android:contentDescription="@string/smartbar__quick_action__exit_editing"
            android:src="@drawable/ic_arrow_back"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/kobold_rv_inline_suggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_inline_suggestion"
            tools:itemCount="5"
            />

    </dev.patrickgold.florisboard.common.FlorisViewFlipper>

    <dev.patrickgold.florisboard.common.FlorisViewFlipper
        android:id="@+id/main_area"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@id/action_start_area"
        app:layout_constraintEnd_toStartOf="@id/action_end_area"
        app:layout_constraintTop_toTopOf="parent">

        <dev.patrickgold.florisboard.ime.text.smartbar.CandidateView
            android:id="@+id/candidates"
            style="@style/SmartbarContainer"/>

        <HorizontalScrollView
            android:id="@+id/inline_suggestions"
            style="@style/SmartbarContainer">

            <LinearLayout
                android:id="@+id/inline_suggestions_strip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/quick_actions"
            style="@style/SmartbarContainer">

            <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
                android:id="@+id/quick_action_undo"
                style="@style/SmartbarQuickAction"
                android:contentDescription="@string/smartbar__quick_action__undo"
                android:src="@drawable/ic_undo"/>

            <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
                android:id="@+id/quick_action_redo"
                style="@style/SmartbarQuickAction"
                android:contentDescription="@string/smartbar__quick_action__redo"
                android:src="@drawable/ic_redo"/>

            <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
                android:id="@+id/quick_action_switch_to_media_context"
                style="@style/SmartbarQuickAction"
                android:contentDescription="@string/smartbar__quick_action__switch_to_media_context"
                android:src="@drawable/ic_sentiment_satisfied"/>

            <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
                android:id="@+id/quick_action_open_settings"
                style="@style/SmartbarQuickAction"
                android:contentDescription="@string/smartbar__quick_action__open_settings"
                android:src="@drawable/ic_settings"/>

            <!-- TODO: find better icon for one-handed mode -->
            <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
                android:id="@+id/quick_action_one_handed_toggle"
                style="@style/SmartbarQuickAction"
                android:contentDescription="@string/smartbar__quick_action__one_handed_mode"
                android:src="@drawable/ic_smartphone"/>

            <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
                android:id="@+id/quick_action_switch_to_editing_context"
                style="@style/SmartbarQuickAction"
                android:contentDescription="@string/smartbar__quick_action__switch_to_editing_context"
                android:src="@drawable/ic_open_with"/>

        </LinearLayout>

        <dev.patrickgold.florisboard.ime.text.keyboard.TextKeyboardView
            android:id="@+id/clipboard_cursor_row"
            style="@style/SmartbarContainer"
            android:layoutDirection="ltr"
            app:isSmartbarKeyboard="true"/>

        <dev.patrickgold.florisboard.ime.text.keyboard.TextKeyboardView
            android:id="@+id/number_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="ltr"
            app:isSmartbarKeyboard="true"/>

    </dev.patrickgold.florisboard.common.FlorisViewFlipper>

    <dev.patrickgold.florisboard.common.FlorisViewFlipper
        android:id="@+id/action_end_area"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <dev.patrickgold.florisboard.ime.text.smartbar.SmartbarQuickActionButton
            android:id="@+id/private_mode_button"
            style="@style/SmartbarQuickAction.PrivateModeButton"
            android:contentDescription="@string/smartbar__quick_action__private_mode"
            android:src="@drawable/ic_security"/>

    </dev.patrickgold.florisboard.common.FlorisViewFlipper>

</dev.patrickgold.florisboard.ime.text.smartbar.SmartbarView>
