<?xml version="1.0" encoding="utf-8"?>
<com.kokatto.kobold.transaction.KeyboardCreateTransaction xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/editorBackground"
        app:layout_constraintBottom_toTopOf="@id/footer_layout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/kobold_margin_12px">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7F7F7"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/increase_form_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/kobold_createtransaction_expand_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_arrow_increase_minor"
                        android:drawableLeft="@drawable/ic_arrow_increase_minor"
                        android:drawablePadding="@dimen/kobold_margin_8px"
                        android:text="@string/kobold_createchat_expand_view"
                        android:textColor="@color/blue_text"
                        app:drawableLeftCompat="@drawable/ic_arrow_increase_minor"
                        app:drawableStartCompat="@drawable/ic_arrow_increase_minor" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyer_detail_title"
                android:textColor="@color/textColorDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.kokatto.kobold.uicomponent.KoboldEditText
                android:id="@+id/kobold_transaction_buyer_name"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="@dimen/kobold_margin_8px"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                app:label="@string/kobold_transaction_buyer_name"
                app:maxAllowedCharacters="50" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kokatto.kobold.uicomponent.KoboldEditText
                    android:id="@+id/kobold_transaction_choose_channel"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="@dimen/kobold_margin_8px"
                    android:layout_weight="1"
                    android:entries="@array/kobold_pick_template_values"
                    app:label="@string/kobold_transaction_choosechannel"
                    app:showChevron="true" />

                <com.kokatto.kobold.uicomponent.KoboldEditText
                    android:id="@+id/kobold_transaction_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="@dimen/kobold_margin_4px"
                    android:layout_marginTop="@dimen/kobold_margin_8px"
                    android:layout_weight="1"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    app:label="@string/kobold_transaction_phone_number"
                    app:maxAllowedCharacters="50" />

            </LinearLayout>

            <com.kokatto.kobold.uicomponent.KoboldEditText
                android:id="@+id/kobold_transaction_receiver_address"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/kobold_margin_12px"
                android:inputType="textMultiLine|textCapSentences"
                app:label="@string/kobold_transaction_receiver_address"
                app:maxAllowedCharacters="1000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/border" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/kobold_margin_24px"
                android:text="@string/order_detail_title"
                android:textColor="@color/textColorDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.kokatto.kobold.uicomponent.KoboldEditText
                android:id="@+id/kobold_transaction_order_detail"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_marginTop="8dp"
                android:hint="@string/kobold_transaction_order_detail_hint"
                android:inputType="textMultiLine|textCapSentences"
                app:label="@string/kobold_transaction_order_detail"
                app:maxAllowedCharacters="1000" />

            <com.kokatto.kobold.uicomponent.KoboldEditText
                android:id="@+id/kobold_transaction_item_price"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:hint="@string/kobold_transaction_price_hint"
                android:inputType="number"
                app:isNeedThousandSeparator="true"
                app:label="@string/kobold_transaction_price_item"
                app:maxAllowedCharacters="1000" />

            <com.kokatto.kobold.uicomponent.KoboldEditText
                android:id="@+id/kobold_transaction_payment_method"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="@dimen/kobold_margin_8px"
                android:layout_weight="1"
                android:entries="@array/kobold_pick_template_values"
                app:label="@string/kobold_transaction_payment_type"
                app:showChevron="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kokatto.kobold.uicomponent.KoboldEditText
                    android:id="@+id/kobold_transaction_courier"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="@dimen/kobold_margin_8px"
                    android:layout_weight="1"
                    android:entries="@array/kobold_pick_template_values"
                    app:label="@string/kobold_transaction_courier"
                    app:showChevron="true" />

                <com.kokatto.kobold.uicomponent.KoboldEditText
                    android:id="@+id/kobold_transaction_shippingcost"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="@dimen/kobold_margin_4px"
                    android:layout_marginTop="@dimen/kobold_margin_8px"
                    android:layout_weight="1"
                    android:hint="@string/kobold_transaction_price_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    app:isNeedThousandSeparator="true"
                    app:label="@string/kobold_transaction_shippingcost"
                    app:maxAllowedCharacters="50"
                    app:showCalculator="true" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/kobold_item_42px"
                android:textColor="@color/text_secondary"
                android:gravity="center"
                android:textSize="10sp"
                android:text="Harga Barang dan Metode pembayaran wajib diisi." />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:background="@color/cardViewBackgroundColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:src="@drawable/ic_keyboard_arrow_left"
            app:drawableLeftCompat="@drawable/ic_keyboard_arrow_left"
            app:drawableStartCompat="@drawable/ic_keyboard_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_transaction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/kobold_blue_button"
            android:paddingHorizontal="@dimen/kobold_margin_12px"
            android:text="@string/kobold_transaction_button_create"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.kokatto.kobold.transaction.KeyboardCreateTransaction>
