<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <include layout="@layout/toolbar"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"/>

    <LinearLayout
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ViewFlipper
            android:id="@+id/negative_button_view_flipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/prev_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_keyboard_arrow_left"
                android:drawableTint="@drawable/button_enable_color_selector"
                android:enabled="false"
                android:text="@string/setup__prev_button" />

            <Button
                android:id="@+id/cancel_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/setup__cancel_button" />

        </ViewFlipper>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1.0" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:max="3"
            tools:progress="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1.0" />

        <ViewFlipper
            android:id="@+id/positive_button_view_flipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/next_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                android:drawableTint="@drawable/button_enable_color_selector"
                android:enabled="false"
                android:text="@string/setup__next_button" />

            <Button
                android:id="@+id/finish_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:enabled="false"
                android:text="@string/setup__finish_button" />

            <Button
                android:id="@+id/ok_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:enabled="false"
                android:text="@string/setup__ok_button" />

        </ViewFlipper>

    </LinearLayout>

</LinearLayout>
